syntax = "proto3";
package elipticoin;

service BaseToken {
  rpc _Initialize (InitializeArgs) returns (Empty) {}
  rpc BalanceOf (Address) returns (Balance) {}
  rpc Transfer (TransferArgs) returns (Empty) {}
}

message InitializeArgs {
  uint64 initial_supply = 1;
}

message Empty {
}

message Address {
  bytes bytes = 1;
}

message TransferArgs {
  bytes receiver_address = 1;
  uint64 amount = 2;
}

message Balance {
  uint64 amount = 1;
}

